tests/neg/type_error6.scala
class Main {
  val foo: Int = 0.0

  def main = {
    0
  }
}